--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 - 3.6
 install: pip install -r requirements.txt
 before_script:
-- export FLASK_APP="$TRAVIS_BUILD_DIR/autoapp.py"
+- export FLASK_APP="$TRAVIS_BUILD_DIR/main.py"
 - export FLASK_DEBUG=1
 before_install:
 - openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv
