--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
 before_install:
 - openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv
   -in client-secret.json.enc -out client-secret.json -d
+script: flash --help
 deploy:
   provider: gae
   keyfile: client-secret.json
