--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ before_script:
 - export FLASK_APP="$TRAVIS_BUILD_DIR/main.py"
 - export FLASK_DEBUG=1
 before_install:
-- openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv
-  -in client-secret.json.enc -out client-secret.json -d
+- 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv -in client-secret.json.enc -out client-secret.json -d; fi'
 script: flask --help
 deploy:
   provider: gae
   keyfile: client-secret.json
   project: crossrail
+  on:
+    branch: master
