Add correct project id

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ script: flask --help
 deploy:
   provider: gae
   keyfile: client-secret.json
-  project: crossrail
+  project: crossrail-219310
   on:
     branch: master
