--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@ before_script:
 - export FLASK_APP="$TRAVIS_BUILD_DIR/main.py"
 - export FLASK_DEBUG=1
 before_install:
-- 'if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv -in client-secret.json.enc -out client-secret.json -d; fi'
+- if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv
+  -in config.py.enc -out config.py -d; fi
+- if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_18396a2de35a_key
+  -iv $encrypted_18396a2de35a_iv -in client-secret.json.enc -out client-secret.json
+  -d; fi
 script: flask --help
 deploy:
   provider: gae
   keyfile: client-secret.json
   project: crossrail-219310
-  on:
-    branch: master
+after_deploy: 
