--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_script:
 before_install:
 
 - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_18396a2de35a_key -iv $encrypted_18396a2de35a_iv -in secrets.tar.enc -out secrets.tar -d && tar xvf secrets.tar; fi
-script: flask --help
+- ls -la
+script: flask --help && ls -la
 deploy:
   provider: gae
   keyfile: client-secret.json
